<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1" >

    <EditText
        android:id="@+id/principal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/principal_hint" >

        <requestFocus>
        </requestFocus>
    </EditText>

    <LinearLayout
        android:id="@+id/conversation_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
    </LinearLayout>

    <Button
        android:id="@+id/authentication"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_start_authentication" />

    <Button
        android:id="@+id/cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="cancel"
        android:text="@string/label_cancel"
        android:visibility="gone" />

    <Button
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_list" />

    <Button
        android:id="@+id/destroy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_destroy" />

    <TextView
        android:id="@+id/log"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scrollbars="vertical"
        android:text="" >
    </TextView>

</LinearLayout>